@@ -10,7 +10,7 @@
     <OutputType>Library</OutputType>
     <RootNamespace>R7.University.EmployeeDirectory</RootNamespace>
     <AssemblyName>R7.University.EmployeeDirectory</AssemblyName>
-    <ReleaseVersion>1.3.0</ReleaseVersion>
+    <ReleaseVersion>1.3.1</ReleaseVersion>
   </PropertyGroup>
   <PropertyGroup Condition=" '$(Configuration)|$(Platform)' == 'Debug|AnyCPU' ">
     <DebugSymbols>true</DebugSymbols>
