@@ -9,7 +9,7 @@
     <OutputType>Library</OutputType>
     <RootNamespace>R7.University</RootNamespace>
     <AssemblyName>R7.University</AssemblyName>
-    <ReleaseVersion>1.3.0</ReleaseVersion>
+    <ReleaseVersion>1.3.1</ReleaseVersion>
   </PropertyGroup>
   <PropertyGroup Condition=" '$(Configuration)|$(Platform)' == 'Debug|AnyCPU' ">
     <DebugSymbols>true</DebugSymbols>
@@ -121,7 +121,7 @@
     <None Include="SqlDataProvider\01.02.01.SqlDataProvider" />
     <None Include="SqlDataProvider\01.02.00.SqlDataProvider" />
     <None Include="SqlDataProvider\01.03.00.SqlDataProvider" />
-    <None Include="SqlDataProvider\01.03.01.SqlDataProvider" />
+    <None Include="SqlDataProvider\01.04.00.SqlDataProvider" />
   </ItemGroup>
   <ItemGroup>
     <Content Include="css\admin.css" />
