@@ -1,6 +1,6 @@
 ﻿<dotnetnuke type="Package" version="5.0">
 	<packages>
-		<package name="R7.University" type="Library" version="01.03.00">
+		<package name="R7.University" type="Library" version="01.03.01">
 			<friendlyName>R7.University</friendlyName>
 			<description>This is a common library for all R7.University modules. By installing this package, you also install all available R7.University modules, such as Launchpad, Division, Employee, EmployeeList, etc.</description>
 			<owner>
@@ -12,7 +12,7 @@
 			<license src="License.txt" />
 			<releaseNotes src="ReleaseNotes.txt" />
 			<dependencies>
-				<dependency type="CoreVersion">07.01.02</dependency>
+				<dependency type="CoreVersion">07.04.00</dependency>
 				<!-- <dependency type="type">AjaxControlToolkit.ComboBox</dependency> -->
 			</dependencies>
 			<components>
@@ -81,7 +81,7 @@
                         </script>
 						<script type="UnInstall">
 							<name>SqlDataProvider\Uninstall.SqlDataProvider</name>
-							<version>01.03.00</version>
+							<version>01.03.01</version>
 						</script>
 					</scripts>
 				</component>
@@ -113,7 +113,7 @@
 				</component>
 			</components>
 		</package>
-		<package name="R7.University.Launchpad" type="Module" version="01.03.00">
+		<package name="R7.University.Launchpad" type="Module" version="01.03.01">
 			<friendlyName>R7.University.Launchpad</friendlyName>
 			<description>This is a simple module to display some records from database table.</description>
 			<owner>
@@ -125,7 +125,7 @@
 			<license src="License.txt" />
 			<releaseNotes src="ReleaseNotes.txt" />
 			<dependencies>
-				<dependency type="CoreVersion">07.01.02</dependency>
+				<dependency type="CoreVersion">07.04.00</dependency>
 			</dependencies>
 			<components>
 				<component type="Module">
@@ -273,7 +273,7 @@
 				</component>
       		</components>
 		</package>
-		<package name="R7.University.Employee" type="Module" version="01.03.00">
+		<package name="R7.University.Employee" type="Module" version="01.03.01">
 			<friendlyName>_Employee</friendlyName>
 			<description>This is a module to display information about single employee.</description>
 			<owner>
@@ -285,7 +285,7 @@
 			<license src="License.txt" />
 			<releaseNotes src="ReleaseNotes.txt" />
 			<dependencies>
-				<dependency type="CoreVersion">07.01.02</dependency>
+				<dependency type="CoreVersion">07.04.00</dependency>
 			</dependencies>
 			<components>
 				<component type="Module">
@@ -377,7 +377,7 @@
 				</component>
 			</components>
 		</package>
-		<package name="R7.University.EmployeeDetails" type="Module" version="01.03.00">
+		<package name="R7.University.EmployeeDetails" type="Module" version="01.03.01">
 			<friendlyName>_EmployeeDetails</friendlyName>
 			<description>This is a module to display detailed information about single employee.</description>
 			<owner>
@@ -389,7 +389,7 @@
 			<license src="License.txt" />
 			<releaseNotes src="ReleaseNotes.txt" />
 			<dependencies>
-				<dependency type="CoreVersion">07.01.02</dependency>
+				<dependency type="CoreVersion">07.04.00</dependency>
 			</dependencies>
 			<components>
 				<component type="Module">
@@ -461,7 +461,7 @@
 				</component>
 			</components>
 		</package>
-		<package name="R7.University.EmployeeList" type="Module" version="01.03.00">
+		<package name="R7.University.EmployeeList" type="Module" version="01.03.01">
 			<friendlyName>_EmployeeList</friendlyName>
 			<description>This is a simple module to display a list of employees.</description>
 			<owner>
@@ -473,7 +473,7 @@
 			<license src="License.txt" />
 			<releaseNotes src="ReleaseNotes.txt" />
 			<dependencies>
-				<dependency type="CoreVersion">07.01.02</dependency>
+				<dependency type="CoreVersion">07.04.00</dependency>
 			</dependencies>
 			<components>
 				<component type="Module">
@@ -554,7 +554,7 @@
 				</component>
 			</components>
 		</package>
-		<package name="R7.University.Division" type="Module" version="01.03.00">
+		<package name="R7.University.Division" type="Module" version="01.03.01">
 			<friendlyName>_Division</friendlyName>
 			<description>This is a module to display information about single division.</description>
 			<owner>
@@ -566,7 +566,7 @@
 			<license src="License.txt" />
 			<releaseNotes src="ReleaseNotes.txt" />
 			<dependencies>
-				<dependency type="CoreVersion">07.01.02</dependency>
+				<dependency type="CoreVersion">07.04.00</dependency>
 			</dependencies>
 			<components>
 				<component type="Module">
@@ -647,7 +647,7 @@
 				</component>
 			</components>
 		</package>
-		<package name="R7.University.EmployeeDirectory" type="Module" version="01.03.00">
+		<package name="R7.University.EmployeeDirectory" type="Module" version="01.03.01">
 			<friendlyName>R7.University.EmployeeDirectory</friendlyName>
 			<description>This is a module to display information about employees.</description>
 			<owner>
@@ -659,7 +659,7 @@
 			<license src="License.txt" />
 			<releaseNotes src="ReleaseNotes.txt" />
 			<dependencies>
-				<dependency type="CoreVersion">07.01.02</dependency>
+				<dependency type="CoreVersion">07.04.00</dependency>
 			</dependencies>
 			<components>
 				<component type="Module">
@@ -740,7 +740,7 @@
 				</component>
 			</components>
 		</package>
-		<package name="R7.University.DivisionDirectory" type="Module" version="01.03.00">
+		<package name="R7.University.DivisionDirectory" type="Module" version="01.03.01">
 			<friendlyName>R7.University.DivisionDirectory</friendlyName>
 			<description>This is a module to display information about employees.</description>
 			<owner>
@@ -752,7 +752,7 @@
 			<license src="License.txt" />
 			<releaseNotes src="ReleaseNotes.txt" />
 			<dependencies>
-				<dependency type="CoreVersion">07.01.02</dependency>
+				<dependency type="CoreVersion">07.04.00</dependency>
 			</dependencies>
 			<components>
 				<component type="Module">
