@@ -1,4 +1,11 @@
-﻿<h3>Version 1.3.0</h3>
+﻿<h3>Version 1.3.1</h3>
+<ul>
+    <li>Fix #77: EditEmployee: crash when opening in DNN 7.4.2.</li>
+    <li>Update uninstall script to drop tables and views added in 1.3.0.</li>
+    <li>Set library and module CoreVersion dependency to DNN 7.4.0.</li>
+</ul>
+
+<h3>Version 1.3.0</h3>
 <p><strong>Important change:</strong> Educational programs and educational profiles were separated. 
 Install script perform DB schema change and also safely move data between new tables.</p>
 <p><strong>Before upgrade:</strong> Make sure, what University_EduProgram table don't have any records
